--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
           sudo add-apt-repository ppa:openscad/releases
           sudo apt-get install openscad
           ls
-      - name: Convert swedish OpenScad
+      - name: Render STLs
         run: | 
           declare -a arr=("alphabetic" "symbols" "functions" "commands" "swedish" "numeric" "all")
           for i in "${arr[@]}"
